compiler/src/test/resources/amyc/nameAnalyzer/failing/DuplicateDefs2.amy
module DefNames
  abstract class Foo
  case class Bar() : Foo

  fn Foo(): Int = { 42 }
end DefNames
